# code-challenge

./: .pre-commit-config.yaml  README.md  conftest.py  goblin_puzzle.py  manage.py  notes.md  pyproject.toml
challenge/: urls.py  wsgi.py
challenge/energy/: apps.py  exceptions.py  models.py  urls.py  views.py
challenge/energy/handlers/: __init__.py  upload_csv.py
challenge/energy/migrations/: 0001_initial.py
challenge/energy/templates/energy/: upload_csv.html  upload_success.html
challenge/energy/tests/: factories.py  test_models.py
challenge/energy/tests/views/: test_upload_csv.py
challenge/settings/: base.py  dev.py  production.py  test.py
challenge/tasks/: apps.py  models.py  urls.py  views.py
challenge/tasks/migrations/: 0001_initial.py
challenge/tasks/tests/: factories.py
challenge/tasks/tests/integration/: test_api.py
challenge/tasks/tests/unit/: test_views.py
challenge/users/: admin.py  apps.py  managers.py  models.py
challenge/users/migrations/: 0001_initial.py
challenge/users/tests/: factories.py  test_models.py
